2010-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* SilverlightHost.cs: More reflection into S.W.Browser.dll to set
	the NavigationState (which affects bookmarks) and the event (that
	can only be set if the iframe is present).

2010-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* SilverlightHost.cs: Reflect into S.W.Browser.dll (to avoid
	lot of code duplication) and complete NavigationState implementation

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* SilverlightHost.cs: Implement NavigationStateChanged and
	(partially) implement NavigationState.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Content.cs:
	* FullScreenOptions.cs:
	* ComAutomationEvent.cs:
	* ComAutomationFactory.cs:
	* ComAutomationEventArgs.cs:
	* ComAutomationEventHandler.cs: Update to SL4 final API.

2010-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* SilverlightHost.cs: Move InitParams initialization here (and
	avoid creating a unneeded object)

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* SilverlightHost.cs (get_Source): deal with PluginHost.Handle ==
	IntPtr.Zero, by using Surface::GetSourceLocation.

	* PluginHost.cs (GetApplicationIdentity): open this method up so
	we can call it from Deployment.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ComAutomationMetaObjectProviderAwaitingIndex.cs:
	* ComAutomationMetaObjectProviderBase.cs:
	* ComAutomationEvent.cs:
	* ComAutomationEventArgs.cs:
	* ComAutomationEventHandler.cs:
	* ComAutomationEventMetaObjectProvider.cs:
	* ComAutomationFactory.cs:
	* ComAutomationMetaObjectProvider.cs:
	* Settings.cs: Update to SL4 beta API.

2010-02-03  Larry Ewing  <lewing@novell.com>

	* SilverlightHost.cs: add a hack to expose InitParams.

2009-12-16  Jeffrey Stedfast  <fejj@novell.com>

	* Settings.cs (EnableFrameRateCounter): Implemented.
	(EnableRedrawRegions): Implemented.

	* NavigationStateChangedEventArgs.cs: Made the ctor public and
	fixed the order of the args.
